--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.3-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 01 Aug 2017 12:36:22 +0200
+
 swh-deposit (0.0.3-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.3
