--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.5-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.5
+  * Package and add missing python3-djangorestframework-xml
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 18 Sep 2017 15:10:01 +0200
+
 swh-deposit (0.0.4-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.4
