--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+swh-deposit (0.0.6-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.6
+  * Make the packages include all that's needed (templates, fixtures)
+  * Fix typo in production settings file
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 18 Sep 2017 16:17:53 +0200
+
 swh-deposit (0.0.5-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.5
