--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.7-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.7
+  * Add swh.deposit.create_user routine to setup user information
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 19 Sep 2017 10:44:59 +0200
+
 swh-deposit (0.0.6-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.6
