--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.14-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Thu, 28 Sep 2017 16:56:54 +0200
+
 swh-deposit (0.0.14-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.14
