--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+swh-deposit (0.0.16-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.16
+  * packaging: Split python3-swh.deposit / python3-swh.deposit.injection
+  * swh.deposit.injection: Add deposit archive ingestion task
+  * packaging: Cleanup
+  * swh.deposit.auth: Cleanup authentication to use directly drf's
+  * swh.deposit.api: Split between private and public api
+  * swh.deposit.api: Add private api to update deposit's status
+  * swh.deposit.scheduler.cli: Add one-shot task scheduling machinery
+  * swh.deposit.tests: use the collection name when creating uri
+  * swh.deposit.admin: Clean up unused code
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Fri, 13 Oct 2017 15:41:47 +0200
+
 swh-deposit (0.0.15-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.15
