--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.18-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.18
+  * swh.deposit.api.deposit: make slug header mandatory
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Sat, 14 Oct 2017 10:45:08 +0200
+
 swh-deposit (0.0.17-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.17
