--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+swh-deposit (0.0.23-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.23
+  * swh.deposit.api: Deal with new 'rejected' status on deposit
+  * docs: Update documentation to latest development
+  * swh.deposit.api: Update docstrings properly
+  * swh.deposit.api: Add post check validation on deposit
+  * swh.deposit.tests: Add edge case scenario tests (upload size limit,
+  * deposit read archives, etc...)
+  * swh.deposit.api: Fix mismatch hash check message
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 23 Oct 2017 11:31:39 +0200
+
 swh-deposit (0.0.22-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.22
