--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.24-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.24
+  * swh.deposit.api: Fix 500 error when browsing api through browser
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 23 Oct 2017 15:37:11 +0200
+
 swh-deposit (0.0.23-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.23
