--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.25-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.25
+  * swh.deposit.production: Add support for proxy headers in django
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 24 Oct 2017 14:08:42 +0200
+
 swh-deposit (0.0.24-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.24
