--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+swh-deposit (0.0.26-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.26
+  * swh.deposit: Be consistent in the deposit_status key returned
+  * docs: Move actual docs inside the docs/ folder
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 25 Oct 2017 17:37:02 +0200
+
 swh-deposit (0.0.25-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.25
