--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.29-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.29
+  * Fix inconsistent term in code
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 29 Nov 2017 15:22:36 +0100
+
 swh-deposit (0.0.28-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.28
