--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+swh-deposit (0.0.30-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.30
+  * swh.deposit.signals: Fix wrong task scheduling argument
+  * swh.deposit.migration: Remove default value
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 29 Nov 2017 18:34:29 +0100
+
 swh-deposit (0.0.29-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.29
