--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+swh-deposit (0.0.31-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.31
+  * swh.deposit.api: Separate public/private api
+  * swh.deposit.api.common: Fix authentication issue in production
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Thu, 30 Nov 2017 13:18:15 +0100
+
 swh-deposit (0.0.30-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.30
