--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+swh-deposit (0.0.33-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.33
+  * Bump to latest swh.loader.tar
+  * dev swh.deposit.api: Add parent deposit to deposit at creation time
+  * swh.deposit.service: Clean dead code
+  * bin/Makefile: Add multipart deposit sample script
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 04 Dec 2017 18:59:50 +0100
+
 swh-deposit (0.0.32-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.32
