--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+swh-deposit (0.0.34-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.34
+  * d/control: Bump to latest version
+  * Fix client config typo for local url
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 05 Dec 2017 15:43:59 +0100
+
 swh-deposit (0.0.33-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.33
