--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.35-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.35
+  * swh.deposit.loader: Fix intermediary status
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 05 Dec 2017 19:23:40 +0100
+
 swh-deposit (0.0.34-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.34
