--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.38-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.38
+  * Provide existing swh id in the status api when it exists
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Fri, 08 Dec 2017 09:41:21 +0100
+
 swh-deposit (0.0.37-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.37
