--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.38-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Fri, 08 Dec 2017 09:41:21 +0100
+
 swh-deposit (0.0.38-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.38
