--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+swh-deposit (0.0.39-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.39
+  * Amend detail status message
+  * docs: Fix url
+  * Fix check of deposit without content scenario
+  * Refactor metadata check with pythonic function
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 08 Jan 2018 12:43:15 +0100
+
 swh-deposit (0.0.38-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.38
