--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.41-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 10 Jan 2018 12:12:43 +0100
+
 swh-deposit (0.0.41-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.41
