--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.42-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.42
+  * Fix cosmetic issues in deposit.s.o
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 10 Jan 2018 16:25:48 +0100
+
 swh-deposit (0.0.41-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.41
