--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+swh-deposit (0.0.43-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.43
+  * swh.deposit.api: Deposit returns persistent identifiers
+  * swh.deposit.api: Rename deposit statuses
+  * swh.deposit: Support standard tarball formats (.tar.*)
+  * docs: Update documentation about new archive format support
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 17 Jan 2018 12:02:20 +0100
+
 swh-deposit (0.0.42-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.42
