--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.45-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.45
+  * Simplify collection name retrieval
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 29 Jan 2018 18:09:29 +0100
+
 swh-deposit (0.0.44-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.44
