--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.47-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.47
+  * swh.loader: Be consistent in returning loader result in task
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 30 Jan 2018 19:03:49 +0100
+
 swh-deposit (0.0.46-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.46
