--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.49-1~swh1) unstable-swh; urgency=medium
+
+  * Release swh.deposit v0.0.49
+  * Use snapshots instead of occurrences
+
+ -- Nicolas Dandrimont <nicolas@dandrimont.eu>  Tue, 06 Feb 2018 14:48:53 +0100
+
 swh-deposit (0.0.48-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.48
