--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.49-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Nicolas Dandrimont <nicolas@dandrimont.eu>  Tue, 06 Feb 2018 14:48:53 +0100
+
 swh-deposit (0.0.49-1~swh1) unstable-swh; urgency=medium
 
   * Release swh.deposit v0.0.49
