--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.50-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.50
+  * Bump requirements up for new swh.loader.tar
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Mon, 12 Feb 2018 11:21:03 +0100
+
 swh-deposit (0.0.49-1~swh1) unstable-swh; urgency=medium
 
   * Release swh.deposit v0.0.49
