--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+swh-deposit (0.0.51-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.51
+  * Improve origin_visit initialization step
+  * Properly sandbox the prepare statement so that if it breaks, we can
+  * update appropriately the visit with the correct status
+  * Let the visit date be set in lower layer
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 07 Mar 2018 11:07:11 +0100
+
 swh-deposit (0.0.50-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.50
