--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.52-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.52
+  * Make the deposit's scheduler configuration adjustable
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Thu, 03 May 2018 15:16:30 +0200
+
 swh-deposit (0.0.51-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.51
