--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.53-1~swh1~bpo9+1) stretch-swh; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Fri, 06 Jul 2018 16:26:08 +0200
+
 swh-deposit (0.0.53-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.53
