--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.55-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.55
+  * deposit_status: Open detailed status when a deposit fails the checks
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 11 Jul 2018 12:06:10 +0200
+
 swh-deposit (0.0.54-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.54
