Updated debian directory for version 0.0.59

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+swh-deposit (0.0.59-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.59
+  * deposit.utils: Fix the potential metadata information loss
+  * docs: Add sparse/metadata deposit specs
+  * docs: Update documentation about persistent id with context
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 24 Jul 2018 14:15:55 +0200
+
 swh-deposit (0.0.58-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.58
