--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.60-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.60
+  * Fix production issue regarding deposit status endpoint.
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Tue, 04 Sep 2018 18:30:01 +0200
+
 swh-deposit (0.0.59-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.59
