--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+swh-deposit (0.0.61-1~swh1) unstable-swh; urgency=medium
+
+  * v0.0.61
+  * Add api endpoint to list deposits with pagination
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Wed, 12 Sep 2018 14:44:58 +0200
+
 swh-deposit (0.0.60-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.60
