--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.63-1~swh2) unstable-swh; urgency=medium
+
+  * New upstream release, fixing dependencies
+
+ -- Antoine R. Dumont (@ardumont) <antoine.romain.dumont@gmail.com>  Thu, 14 Feb 2019 18:16:04 +0100
+
 swh-deposit (0.0.63-1~swh1) unstable-swh; urgency=medium
 
   * v0.0.63
