--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.0.72-1~swh1~bpo10+1) buster-swh; urgency=medium
+
+  * Rebuild for buster-swh
+
+ -- Nicolas Dandrimont <olasd@debian.org>  Thu, 11 Jul 2019 14:27:23 +0200
+
 swh-deposit (0.0.72-1~swh1) unstable-swh; urgency=medium
 
   * New upstream release 0.0.72     - (tagged by Valentin Lorentz
