--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (0.13.0-1~swh2) unstable-swh; urgency=medium
+
+  * Fix build time dependency release
+
+ -- Antoine R. Dumont (@ardumont) <ardumont@softwareheritage.org>  Mon, 22 Mar 2021 12:40:40 +0100
+
 swh-deposit (0.13.0-1~swh1) unstable-swh; urgency=medium
 
   * New upstream release 0.13.0     - (tagged by Antoine R. Dumont
