--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (1.0.0-1~swh2) unstable-swh; urgency=medium
+
+  * Update dependency and release
+
+ -- Antoine R. Dumont (@ardumont) <ardumont@softwareheritage.org>  Thu, 07 Apr 2022 16:00:54 +0200
+
 swh-deposit (1.0.0-1~swh1) unstable-swh; urgency=medium
 
   * New upstream release 1.0.0     - (tagged by Valentin Lorentz
