--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (1.3.4-1~swh2) unstable-swh; urgency=medium
+
+  * Fix pytest plugins declaration
+
+ -- Antoine R. Dumont (@ardumont) <ardumont@softwareheritage.org>  Thu, 09 Nov 2023 15:53:50 +0100
+
 swh-deposit (1.3.4-1~swh1) unstable-swh; urgency=medium
 
   * New upstream release 1.3.4     - (tagged by Antoine R. Dumont
