--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swh-deposit (1.3.4-1~swh3) unstable-swh; urgency=medium
+
+  * Fix package build by updating control and rules
+
+ -- Antoine Lambert <anlambert@softwareheritage.org>  Thu, 09 Nov 2023 21:54:20 +0100
+
 swh-deposit (1.3.4-1~swh2) unstable-swh; urgency=medium
 
   * Fix pytest plugins declaration
